fixe arts visuels images width overflowing

--- a/src/app/pages/page-peintures/page-peintures.component.scss
+++ b/src/app/pages/page-peintures/page-peintures.component.scss
@@ -84,7 +84,7 @@
 		}
 	}
 	&:hover {
-		width: 1400px;
+		width: 1050px;
 		#presentation1 {
 			transform: translate(-50%, -50%) rotate(2deg);
 		}
